fix canvas wrapping to next line when browser width is too narrow

--- a/styles.css
+++ b/styles.css
@@ -42,6 +42,10 @@ ul {
   margin: 0px;
 }
 
+#main {
+  min-width:1300px;
+}
+
 #canvas {
   float: left;
 }
